# pymediastream

./: .gitignore  README.md  pyproject.toml
examples/: matroska.yaml  simple.yaml  twitch.yaml  webcam.yaml
pymediastream/: __main__.py  gst_yaml.py  joiner.py  shell.py
pymediastream/yaml/: __init__.py  base.py  caps.py  element.py  joiner.py  pad.py  pipeline.py  transition.py
pytwitch/: __main__.py  gst_yaml.py
